After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719861 - Menu separators aren't selectable independently from the widget's border
Menu separators aren't selectable independently from the widget's border
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-12-04 19:06 UTC by Lars Karlitski
Modified: 2013-12-05 11:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add "separator-line" widget region (2.49 KB, patch)
2013-12-04 19:06 UTC, Lars Karlitski
none Details | Review
GtkMenuItem: only set 'separator' class on the separator line (2.50 KB, patch)
2013-12-05 11:44 UTC, Lars Karlitski
committed Details | Review

Description Lars Karlitski 2013-12-04 19:06:36 UTC
GtkMenuItem draws its separator using gtk_render_frame() with the same style
context configuration that GtkWidget uses to draw the widget's frame. Thus,
setting a border for ".menuitem.separator" results in a border style for both
the widget and the separator itself.

The attached patch is a proposed solution: to add a widget region
"separator-line" with which the separator itself is drawn. I don't know if this
is the best solution thouhg, or if widget regions were even meant for this
purpose.
Comment 1 Lars Karlitski 2013-12-04 19:06:39 UTC
Created attachment 263525 [details] [review]
Add "separator-line" widget region

A region used by GtkMenuItem to make its separator line distinguishable
from the widget's normal border in css.
Comment 2 Lars Karlitski 2013-12-05 11:44:39 UTC
Created attachment 263579 [details] [review]
GtkMenuItem: only set 'separator' class on the separator line

To make the separator line distinguishable from the widget's normal
border from css.
Comment 3 Benjamin Otte (Company) 2013-12-05 11:47:23 UTC
Comment on attachment 263579 [details] [review]
GtkMenuItem: only set 'separator' class on the separator line

Looks good.
Comment 4 Lars Karlitski 2013-12-05 11:49:11 UTC
Comment on attachment 263579 [details] [review]
GtkMenuItem: only set 'separator' class on the separator line

Attachment 263579 [details] pushed as d736e8b - GtkMenuItem: only set 'separator' class on the separator line