GtkMenuItem: only set 'separator' class on the separator line

To make the separator line distinguishable from the widget's normal
border from css.

https://bugzilla.gnome.org/show_bug.cgi?id=719861